# scm-calver-config

./: .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml
.gitbub/: renovate.json
.github/: labeler.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-dist.yml  format.yml  lint.yml  publish.yml  python-ci.yml  renovate-config.yml  tests.yml
src/calver_scm/: __init__.py  calver_version.py  config.py  parser.py  scheme.py  utils.py
src/scm_calver/: __init__.py
src/scm_calver_config/: __init__.py
tests/: conftest.py  test_calver.py  test_calver_version.py  test_config.py  test_parser.py  test_scheme_e2e.py  test_utils.py
