[project]
name = "calver-scm"
dynamic = ["version"]
description = "Automatic, configurable CalVer versioning for setuptools-scm — no manual bumping required"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "setuptools-scm>=10.0.5",
    "tomli>=2.4.1; python_version < '3.11'",
]

authors = [
    { name = "Sam Cork" },
]

maintainers = [
    { name = "Sam Cork" },
]

license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]

keywords = [
    "calver",
    "calendar versioning",
    "setuptools-scm",
    "setuptools_scm",
    "versioning",
    "version scheme",
    "automatic versioning",
    "git tags",
    "pyproject",
]

[project.urls]
Homepage = "https://github.com/samcorky/calver-scm"
Repository = "https://github.com/samcorky/calver-scm"
Issues = "https://github.com/samcorky/calver-scm/issues"
Changelog = "https://github.com/samcorky/calver-scm/releases"

[tool.uv]
required-version = ">=0.7.10"

[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calver_scm"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "node-and-timestamp"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
line-length = 88
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking
    "RUF",      # ruff-specific
]

[tool.mypy]
mypy_path = "src"
files = ["src", "tests"]
strict = true
pretty = true

[project.entry-points."setuptools_scm.version_scheme"]
calver-scm = "calver_scm:calver_scm"
