[project]
name = "calver-scm"
dynamic = ["version", "readme"]
description = "Automatic, date-based versioning for Python projects, powered by your Git history."
requires-python = ">=3.10"
dependencies = [
    "setuptools-scm>=10.0.5",
    "tomli>=2.4.1; python_version < '3.11'",
]

authors = [
    { name = "Sam Cork" },
]

maintainers = [
    { name = "Sam Cork" },
]

license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]

keywords = [
    "calver",
    "calendar versioning",
    "setuptools-scm",
    "setuptools_scm",
    "versioning",
    "version scheme",
    "automatic versioning",
    "git tags",
    "pyproject",
]

[project.urls]
Homepage = "https://github.com/samcorky/calver-scm"
Repository = "https://github.com/samcorky/calver-scm"
Issues = "https://github.com/samcorky/calver-scm/issues"
Changelog = "https://github.com/samcorky/calver-scm/releases"

[tool.uv]
required-version = ">=0.7.10"

[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs>=0.5.0", "hatch-fancy-pypi-readme>=24.1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calver_scm"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

# Fragment 1: skip the badge-heavy <div> header and the leading markdown
# divider, then keep the intro up to the table of contents.
[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-after = "\n---\n\n"
end-before = "\n## Contents"

# Fragment 2: resume at Installation, excluding the in-page table of contents,
# and stop before the Contributing dev-setup block.
[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-at = "\n## Installation"
end-before = "\n## Contributing"

# Fragment 3: jump straight to License, skipping the dev setup block.
[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-at = "\n## License"

# Rewrite any relative inline Markdown links/images to absolute GitHub URLs so they
# resolve correctly on PyPI (where there is no base URL context).
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\[(.+?)\]\(((?!https?://)(?!#)\S+?)\)'
replacement = '[\1](https://github.com/samcorky/calver-scm/blob/main/\2)'

# Same for reference-style link definitions: [id]: relative/path
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^\[([^\]]+)\]: ((?!https?://)(?!#)\S+)$'
replacement = '[\1]: https://github.com/samcorky/calver-scm/blob/main/\2'

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "node-and-timestamp"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "unit: fast, module-scoped unit tests",
    "e2e: end-to-end calver_scm behaviour tests",
]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--cov=src/calver_scm",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src/calver_scm"]
omit = [
    "tests/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.ruff]
line-length = 88
fix = true
show-fixes = true
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "N",      # pep8-naming
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "D",      # pydocstyle — replaces pydocstyle tool
    "RUF",    # ruff-specific rules
    "PT",     # flake8-pytest-style
    "ANN",    # flake8-annotations
]
ignore = [
    # formatter conflicts per https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "Q004",   # unnecessary-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "ISC002", # multi-line-implicit-string-concatenation
    # project-specific
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D107",   # missing docstring in __init__
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N", "D", "ANN", "PT011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
mypy_path = "src"
files = ["src", "tests"]
strict = true
pretty = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
explicit_package_bases = true
namespace_packages = true

[project.entry-points."setuptools_scm.version_scheme"]
calver-scm = "calver_scm:calver_scm"
